UI/src/app/dashboard/kpi-card/kpi-card.component.css
.kpi-card-container {
    background: #fff;

    box-shadow: 0px 3px 6px #00000029;
    border-radius: 5px;
    opacity: 1;
    position: relative;
}
.kpi-card-header {
    display: flex;
    justify-content: space-between;
    border-bottom: 1px solid #c0c0c0;
    padding: 8px 10px;
    letter-spacing: 0px;
    color: #333333;
    align-items: center;
}

.kpi-card-icons {
    display: flex;
}

.kpi-card-icons i, .kpi-card-icons fa-icon {
    border: 1px solid #707070;
    color: #707070;
    border-radius: 5px;
    padding: 2px 5px;
    cursor: pointer;
}

.kpi-card-name-placeholder {
    display: flex;
    align-items: center;
}

.kpi-card-name-placeholder h3 {
    font-size: 1rem;
    font-weight: 500;
}

.kpi-card-title-container h3 {
    margin-bottom: auto;
    line-height: 32px;
    margin-top: 0;
}

.kpi-card-indicator {
    display: flex;
    padding: 10px;
}

.kpi-card-footer {
    padding: 5px;
    color: #333333;
    position: absolute;
    bottom: 2px;
    width: auto;
    right: 0;
}

.kpi-card-type-icon {
    width: 50px;
    height: 20px;
    transition: .5s;
}

.kpi-card-type-icon:hover {
    transform: scale(1.5);
}
.kpi-info-icon{
    color: #707070;
    vertical-align: middle;
    margin-top: -2px;
    margin-right: 5px;
    margin-left: 2px;
}

.kpi-download-icon{
    height: 24px;
    cursor: pointer;
}

::ng-deep .filter-radioButton {
    margin: 0 3px 0 0px;
    font-size: 12px;
}

::ng-deep .filter-radioButton label {
    margin: 0 5px;
}

::ng-deep .pointer {
    cursor: pointer;
}

::ng-deep .ng-select-container.ng-has-value,
::ng-deep .kpi-dropdown.ng-select .ng-select-container {
    overflow: visible;
}

::ng-deep .kpi-filter .ng-placeholder {
    top: 5px;
}
.trend-box{
    flex: 0 0 33.3333%;
}


::ng-deep .p-tabview-ink-bar {
    display: none !important;
}

::ng-deep .sprint-hover-project1 [aria-selected="true"] {
    background-color: #079FFF !important;
    color: black !important;
}

::ng-deep .sprint-hover-project2 [aria-selected="true"] {
    background-color: #cdba38 !important;
    color: black !important;
}

::ng-deep .sprint-hover-project3 [aria-selected="true"] {
    background-color: #00E6C3 !important;
    color: black !important;
}

::ng-deep .sprint-hover-project4 [aria-selected="true"] {
    background-color: #fc6471 !important;
    color: black !important;
}

::ng-deep .sprint-hover-project5 [aria-selected="true"] {
    background-color: #bd608c !important;
    color: black !important;
}

::ng-deep .sprint-hover-project6 [aria-selected="true"] {
    background-color: #7d5ba6 !important;
    color: black !important;
}

.sprint-hover-icon {
    height: 13.1px;
    vertical-align: middle;
    margin-top: -2px;
    margin-right: 5px;
    color: black;
}

.overlay-heading{
    font-weight: 500;
    font-size: 1.25rem;
}
::ng-deep .sprint-details-overlay{
    width: auto !important;
    left: 20% !important; right: 20% !important;
    min-width: 450px;
    z-index: 0 !important;

}

::ng-deep div.inner-content{
    background-color: #fbfbfb;
    margin: -10px -10px;
    padding: 5px 7px;
    border: 1px solid #ced9d7;
    border-radius: 5px;
    box-shadow: 1px 1px #ced9d7;
    color: black;
  }

  ::ng-deep .inner-wraper .p-tooltip .ui-tooltip{
    background-color: #fbfbfb;
    color: black;
  }



.kpi-value-center{
    justify-content: center;
}

:host::ng-deep .p-dialog.field-mapping {
    min-width: 90vw !important;
    width: auto !important;
    max-width: 90vw;
    min-height: 20vh !important;

}
.kpi-card-body{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.disable-setting-icon{
    pointer-events: none;
    opacity: 0.5;
}
.kpi-card-body.smallChart {
    height: 272px !important;
    min-height: 272px !important;
}

.custom-pi{
    font-size: 1.1rem;
    font-weight: 1000;
    color: #4a4747;
    font-style: normal;
    -webkit-font-smoothing: antialiased;
}

.green {
    color: var(--color-green);
}

.red {
    color: var(--color-red);
}

